recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:23: error: not found: value snowside
    snowside(1,length/3)
    ^